# simple-shell

./: CMakeLists.txt  main.c
lib/util/: CMakeLists.txt  pipes.c  pipes.h  simple_parser.c  simple_parser.h  util.c  util.h
